Fix webroot path handling and link rendering issues