@@ -1200,21 +1200,21 @@ public class NodeVerticleTest extends AbstractBasicIsolatedCrudVerticleTest {
 			Node node = content("news_2014");
 			NodeResponse response = call(() -> getClient().findNodeByUuid(PROJECT_NAME, node.getUuid(),
 					new NodeParameters().setResolveLinks(LinkType.FULL), new VersioningParameters().draft()));
-			assertTrue(response.getBreadcrumb().get(0).getUuid().equals(folder("2014").getUuid()));
-			assertTrue(response.getBreadcrumb().get(0).getDisplayName().equals("2014"));
-			assertTrue(response.getBreadcrumb().get(1).getUuid().equals(folder("news").getUuid()));
-			assertTrue(response.getBreadcrumb().get(1).getDisplayName().equals("News"));
-			assertEquals("/api/v1/dummy/webroot/News/2014", response.getBreadcrumb().get(0).getPath());
-			assertEquals("/api/v1/dummy/webroot/News", response.getBreadcrumb().get(1).getPath());
+			assertTrue(response.getBreadcrumb().getFirst().getUuid().equals(folder("2014").getUuid()));
+			assertTrue(response.getBreadcrumb().getFirst().getDisplayName().equals("2014"));
+			assertTrue(response.getBreadcrumb().getLast().getUuid().equals(folder("news").getUuid()));
+			assertTrue(response.getBreadcrumb().getLast().getDisplayName().equals("News"));
+			assertEquals("/api/v1/dummy/webroot/News/2014", response.getBreadcrumb().getFirst().getPath());
+			assertEquals("/api/v1/dummy/webroot/News", response.getBreadcrumb().getLast().getPath());
 			assertEquals("Only two items should be listed in the breadcrumb", 2, response.getBreadcrumb().size());
 
 			response = call(() -> getClient().findNodeByUuid(PROJECT_NAME, node.getUuid(), new VersioningParameters().draft()));
-			assertTrue(response.getBreadcrumb().get(0).getUuid().equals(folder("2014").getUuid()));
-			assertTrue(response.getBreadcrumb().get(0).getDisplayName().equals("2014"));
-			assertTrue(response.getBreadcrumb().get(1).getUuid().equals(folder("news").getUuid()));
-			assertTrue(response.getBreadcrumb().get(1).getDisplayName().equals("News"));
-			assertNull("No path should be rendered since by default the linkType is OFF", response.getBreadcrumb().get(0).getPath());
-			assertNull("No path should be rendered since by default the linkType is OFF", response.getBreadcrumb().get(1).getPath());
+			assertTrue(response.getBreadcrumb().getFirst().getUuid().equals(folder("2014").getUuid()));
+			assertTrue(response.getBreadcrumb().getFirst().getDisplayName().equals("2014"));
+			assertTrue(response.getBreadcrumb().getLast().getUuid().equals(folder("news").getUuid()));
+			assertTrue(response.getBreadcrumb().getLast().getDisplayName().equals("News"));
+			assertNull("No path should be rendered since by default the linkType is OFF", response.getBreadcrumb().getFirst().getPath());
+			assertNull("No path should be rendered since by default the linkType is OFF", response.getBreadcrumb().getLast().getPath());
 			assertEquals("Only two items should be listed in the breadcrumb", 2, response.getBreadcrumb().size());
 		}
 	}
